# uwm-bigdata

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  tox.ini
data/books/: ulysses.txt
data/stock/: company_details.csv  market_events.csv  stock.csv  stock.json
docs/: README.md  linki.md  miary_wielkosci.md  potoki.md
docs/spark/: README.md  instalowanie.md  spark core.md  spark sql.md  sql - intro.md  sql - operacje na kolumnach.md  sql - pipelines.md
infrastructure/: cf-mandaty.yaml  cf-sklep.yaml
src/hive/: sklep-ddl.hsql  sklep-logs.hsql
src/notebooks/: Spark RDD.ipynb  Spark RDD2.ipynb  Spark SQL.ipynb  Spark SQL2.ipynb  trening-partitions.ipynb  trening-sql.ipynb
src/spark/: apka.py  apka_rdd.py  spark-submit.sh  stop_words_remover_with_transformer.py  utils.py
src/spark/accumulators/: accumulators.py
src/spark/bucketing/: bucketing.py
src/spark/functions/: spark-functions.py
src/spark/mllib/: als-df.py  als-rdd.py  regression.py
src/spark/movie-lens/: movies.py
src/spark/partitions/: partitions.py
src/spark/streaming/: client.py  kafka.py  server.py  spark-streaming-to-file.py  spark-streaming.py  spark-structured-streaming.py
src/spark/udf/: celsius_to_fahrenheit.py  udf.py
src/sql/: select_categories.sql  select_category.sql  top_categories.sql
src/streaming/: mapper.py  reducer.py
tests/integration/: conftest.py
tests/integration/spark/udf/: test_celsius_to_fahreheit.py
